<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2,3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibtnBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/teal_200"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="Đội xe vận tải"
            android:textColor="@color/black"
            android:textSize="18dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnThem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button"
        android:text="Thêm thông tin đội xe vận tải"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <TableRow>

        <TextView
            android:layout_column="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sothutu"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_column="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/soxe"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_column="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/khachhang"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvDanhSachDoiVanXeTai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</TableLayout>